--- a/app/src/main/res/layout/fragment_todolist.xml
+++ b/app/src/main/res/layout/fragment_todolist.xml
@@ -25,8 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:max="3"
-                android:progress="0"
+                android:max="@{MemoViewModel.test()}"
+                android:progress="1"
                 android:scaleY="1"
                 android:progressTint="@color/orange"
                 android:progressDrawable="@drawable/prbdesign"
