--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,8 +50,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_nav_menu" />
-
+            app:menu="@menu/bottom_nav_menu"
+            app:layout_behavior="tech.thdev.app.view.BottomNavigationBehavior"
+            app:labelVisibilityMode="unlabeled"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
