--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,13 +8,13 @@
     tools:context=".ui.view.activity.IntroActivity">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/introimage"
         android:layout_width="180dp"
         android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_todocalendar" />
-
+        app:srcCompat="@drawable/ic_todocalendar"
+        app:tint="#323232" />
 </androidx.constraintlayout.widget.ConstraintLayout>
