--- a/app/src/main/res/layout/fragment_todolist.xml
+++ b/app/src/main/res/layout/fragment_todolist.xml
@@ -24,10 +24,10 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/year"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@{MemoViewModel.dateFormatted}" />
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                     android:progress="1"
                     android:progressDrawable="@drawable/prbdesign"
                     android:progressTint="@color/orange"
-                    android:scaleY="1.5" />
+                    android:scaleY="1.3" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
