--- a/app/src/main/res/layout/fragment_todolist.xml
+++ b/app/src/main/res/layout/fragment_todolist.xml
@@ -24,57 +24,49 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/year"
+                    android:id="@+id/dateFormatted"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{MemoViewModel.dateFormatted}" />
+                    android:text="@{MemoViewModel.dateFormatted}"
+                    android:textSize="23sp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center_horizontal"/>
 
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="5dp"
-                    android:progress="1"
-                    android:progressDrawable="@drawable/prbdesign"
-                    android:progressTint="@color/orange"
-                    android:scaleY="1.3" />
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:progress="1"
+                        android:progressDrawable="@drawable/prbdesign"
+                        android:progressTint="@color/orange"
+                        android:scaleY="1.3" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/progress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="2dp"
-                        android:text="진행도 : "
+                        android:text="진행도 : 0%"
                         android:textColor="@color/black"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/cbc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0%"
-                        android:textColor="@color/black"
-                        android:textSize="15dp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
+                        android:textStyle="bold"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="5dp"/>
 
                 </FrameLayout>
 
