--- a/app/src/main/res/layout/activity_to_do_inside.xml
+++ b/app/src/main/res/layout/activity_to_do_inside.xml
@@ -81,7 +81,9 @@
                     android:text="title"
                     android:textColor="@color/white"
                     android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
