--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,11 @@
         <item name="android:timePickerStyle">@style/MyTimePickerTheme</item>
 
     </style>
+    <style name="Theme.Wharareyouupto2.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.Wharareyouupto2.AppBarOverlay"
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Wharareyouupto2.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
