--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -7,5 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.activity.SettingActivity">
 
+  <TextView
+      android:id="@+id/titleTV"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="다크모드"
+      android:textSize="24sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <androidx.appcompat.widget.SwitchCompat
+      android:id="@+id/applyModeSwitch"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:text="다크모드"
+      app:layout_constraintEnd_toEndOf="@+id/titleTV"
+      app:layout_constraintStart_toStartOf="@+id/titleTV"
+      app:layout_constraintTop_toBottomOf="@+id/titleTV"
+      app:switchPadding="8dp" />
+
 
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
