--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="orange">#FF7F00</color>
 
     <color name="textcolor">#000000</color>
+    <color name="selectcolor">#ffffff</color>
 </resources>
