--- a/app/src/main/res/drawable/calendar_select_background.xml
+++ b/app/src/main/res/drawable/calendar_select_background.xml
@@ -8,7 +8,7 @@
                 android:width="1dp"
                 android:color="@color/orange" />
             <corners android:radius="4dp" />
-            <solid android:color="@color/white" />
+            <solid android:color="@color/selectcolor" />
             <size
                 android:width="16dp"
                 android:height="16dp">
