--- a/app/src/main/res/layout/fragment_donelist.xml
+++ b/app/src/main/res/layout/fragment_donelist.xml
@@ -37,7 +37,7 @@
                         android:hint="2022년 10월 02일"
                         android:paddingEnd="7dp"
                         android:text="@{MemoViewModel.dateFormatted}"
-                        android:textColor="@color/black"
+                        android:textColor="@color/textcolor"
                         android:textSize="25sp"
                         android:textStyle="bold" />
 
