--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -47,7 +47,7 @@
                 android:text="title"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="@color/black"
+                android:textColor="@color/textcolor"
                 android:textSize="25sp" />
 
             <LinearLayout
