--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,5 @@
 
     <color name="textcolor">#ffffff</color>
     <color name="selectcolor">#404040</color>
+    <color name="cardviewcolor">#808080</color>
 </resources>
