--- a/app/src/main/res/layout/activity_to_do_add.xml
+++ b/app/src/main/res/layout/activity_to_do_add.xml
@@ -80,7 +80,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#dddddd"
+            android:backgroundTint="@color/cardviewcolor"
             app:cardCornerRadius="15dp"
             android:layout_margin="8dp">
 
@@ -106,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:textColor="@color/black"
+            android:textColor="@color/textcolor"
             android:layout_marginEnd="10dp"
             android:text="@={EditViewModel.titlewatcher}"
             android:textStyle="bold" />
@@ -206,7 +206,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#dddddd"
+            android:backgroundTint="@color/cardviewcolor"
             app:cardCornerRadius="15dp"
             android:layout_margin="8dp">
 
@@ -236,7 +236,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="@={EditViewModel.contentwatcher}"
-            android:textColor="@color/black"
+            android:textColor="@color/textcolor"
             android:layout_marginEnd="10dp"
             android:textStyle="bold" />
 
